fix flickering layout on collection page

--- a/src/layouts/Layout/styles.scss
+++ b/src/layouts/Layout/styles.scss
@@ -8,4 +8,5 @@
   // 1px for border, 2 times header padding for top and bottom
   // another 1px for footer excess
   min-height: calc( 100vh - #{$header-height} - 1px - #{$header-padding} - #{$header-padding} - #{$footer-height} - 1px );
+  position: relative;
 }
