--- a/src/pages/Collection/styles.scss
+++ b/src/pages/Collection/styles.scss
@@ -2,8 +2,12 @@
 
 .Collection {
   padding: 32px;
-  height: 100%;
   line-height: 1.5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 
   &-button {
     cursor: pointer;
